@@ -9,7 +9,14 @@
   <FRAME name="frame1" src="/google.html">
   <FRAME name="frame2" src="/form_test.html">
   </FRAMESET>
+  <FRAMESET rows="100, 200">
   <FRAME name="frame3" src="/file_upload.html">
+  <IFRAME src="http://google.com/" name="frame4">
+  [Your user agent does not support frames or is currently configured
+  not to display frames. However, you may visit
+  <A href="foo.html">the related document.</A>]
+  </IFRAME>
+  </FRAMESET>
   <NOFRAMES>
       <P>This frameset document contains:
       <UL>
