@@ -1,0 +1,16 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+   "http://www.w3.org/TR/html4/frameset.dtd">
+<HTML>
+<HEAD>
+<TITLE>A simple frameset document</TITLE>
+</HEAD>
+<BODY>
+  <IFRAME src="/file_upload.html" name="frame4">
+  [Your user agent does not support frames or is currently configured
+  not to display frames. However, you may visit
+  <A href="foo.html">the related document.</A>]
+  </IFRAME>
+</BODY>
+</HTML>
+
+
