@@ -1,3 +1,6 @@
+* Added support for iframes
+* Fixed a bunch of warnings
+
 == 0.4.1
 
 * Added support for file uploading
